--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
 		<title>Tailwind CSS</title>
         <link rel="stylesheet" href="style.css">
 	</head>
-	<body class="bg-yellow-200">
-		<h2>This is my first title.</h2>
+	<body class="h-screen">
+		<div>
+			<img src="../images/fav_icon.png" alt="Fav Icon">
+		</div>
+		<div>
+			<div>
+				<p>Learn With Sumit</p>
+				<p>YouTube Channel</p>
+			</div>
+			<button>Visit Now</button>
+		</div>
 	</body>
 </html>
