--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,25 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Tailwind CSS</title>
-        <link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="style.css" />
 	</head>
-	<body class="h-screen">
-		<div>
-			<img src="../images/fav_icon.png" alt="Fav Icon">
-		</div>
-		<div>
-			<div>
-				<p>Learn With Sumit</p>
-				<p>YouTube Channel</p>
+	<body class="h-screen flex items-center justify-center bg-red-100">
+		<div class="max-w-sm p-8 bg-white rounded-xl shadow-md mx-auto space-y-2">
+			<img
+				class="h-24 mx-auto rounded-full ring-4 mb-4"
+				src="../images/fav_icon.png"
+				alt="Salafee"
+			/>
+			<div class="text-center space-y-2">
+				<p class="text-lg text-black font-semibold"
+					>ThemeWinter Organization</p
+				>
+				<p class="text-gray-500 font-medium">Software Company</p>
+				<button
+					class="px-4 py-2 border border-purple-200 text-sm rounded-full font-medium hover:bg-purple-500 hover:text-white hover:border-purple-500"
+					>Visit Now</button
+				>
 			</div>
-			<button>Visit Now</button>
 		</div>
 	</body>
 </html>
